updating styles, adding edit

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Platzi Badges</title>
+  <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
+  <meta name="Description" content="React Badges demo serverless backend with firebase, fire cloud and firestore.">
+  <title>React Badges</title>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 </head>
 
 <body>
